# ROS2-Midterm-Exam

./: README.md
SectionA_Pub_Sub/: setup.py
SectionA_Pub_Sub/SectionA_Pub_Sub/: circle_publisher.py  odom_logger.py  publisher_member_function.py
SectionB_Service/: setup.cfg
rclpy/SectionA_Pub_Sub/: package.xml  setup.cfg
rclpy/SectionA_Pub_Sub/SectionA_Pub_Sub/: circle_publisher.py
rclpy/SectionA_Pub_Sub/SectionA_Pub_Sub/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rclpy/SectionA_Pub_Sub/SectionA_Pub_Sub/log/: latest_build
rclpy/SectionB_Service/: package.xml  setup.py
rclpy/SectionB_Service/SectionB_Service/: square_service_server.py
rclpy/SectionC_Action/: package.xml  setup.cfg  setup.py
rclpy/SectionC_Action/SectionC_Action/: rotate_action_server.py
rclpy/SectionC_Action/resource/: Rotate.action
rclpy/section_a_pub_sub/: package.xml  setup.cfg  setup.py
rclpy/section_a_pub_sub/section_a_pub_sub/: circle_publisher.py
rclpy/section_b_service/: package.xml  setup.cfg  setup.py
rclpy/section_c_action/: package.xml  setup.py
rclpy/section_c_action/section_c_action/: rotate_action_client.py  rotate_action_server.py
rclpy/section_c_interface/: CMakeLists.txt  package.xml
rclpy/section_c_interface/action/: Rotate.action
