<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>section_c_action</name>
  <version>1.0.0</version>
  <description>TODO: ROS2 Section C Action Server/Client </description>
  <maintainer email="porsohani@gmail.com">porsche</maintainer>
  <license>TODO: License declaration</license>
  <author>Thanpisit Banyam</author>

  <depend>rclpy</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>nav_msgs</exec_depend>

  <exec_depend>section_c_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
